# fastapi-so

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  makefile  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 41d575e77aaf_create_files_table_and_update_users.py  6045332cae2e_create_users_table.py  f92a3c3924d4_create_users_table.py
src/: main.py
src/account/adapters/: mappers.py  orm_repos.py  tables.py
src/account/domain/: enums.py  errors.py
src/account/entities/: user.py
src/account/entrypoints/: dependencies.py  routes.py  schemas.py
src/account/handlers/: login_handler.py  registration_handler.py
src/account/orm/: mappers.py  tables.py
src/account/repositories/: user_repo.py
src/account/service_layer/: dtos.py  repositories.py  types.py
src/account/services/: auth_service.py
src/core/: database.py  errors.py  helpers.py  logger.py  settings.py  types.py
src/core/abstracts/: abstract_entity.py  abstract_repo.py
src/core/base_classes/: abstract_entity.py  abstract_repo.py  base_dto.py  orm_repo.py
src/shared/adapters/: mappers.py  minio_storage.py  orm_repos.py  tables.py
src/shared/domain/: enums.py
src/shared/entrypoints/: dependencies.py  routes.py  schemas.py
src/shared/service_layer/: repositories.py  storage.py  types.py  (+1 more)
tests/: conftest.py
tests/account/: test_auth_service.py  test_get_current_user.py  test_get_me_route.py  test_handle_login.py  test_handle_registration.py  test_login_route.py  test_registration_route.py
tests/core/: test_helpers_validate_email.py
(+11 files in other folders)
